fixed photos alignment in desktop view

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,13 +37,26 @@
 }
 .left {
     float:left;
+    width:65%;
 }
 .left div{
     overflow: hidden;
 }
 .video-container{
-    max-width: 800px;
-    max-height: 600px;
+    display: block;
+    margin:0px auto;
+    max-width: 80%;
+    max-height: auto;
+}
+.image-container{
+    display: block;
+    margin:0px auto;
+    background-size:cover;
+    width:60%;
+    height:auto;
+    -moz-box-shadow: 0 0 10px #ccc;
+    -webkit-box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #000;
 }
 .content-view{
     /* position: fixed; */
@@ -63,15 +76,18 @@
     margin-right:5px;
 }
 .filename:hover,.dirname:hover{
-    background-color:#AAA;
+    background-color:#026464;
 }
 .dirname{
-    color: #333;
-    background-color: #DDD;
+    color: white;
+    background-color: #008B8B;
 }
 .filename{
-    color: #111;
-    background-color: #DDD;
+    color: white;
+    background-color: #008B8B;
+}
+.folder-icon,.file-icon{
+    color:#333;
 }
 .right{
     float:right;
@@ -86,7 +102,19 @@
     overflow-y: auto;
 }
 .back{
+    /* background-color:#3CB371; */
+    color:white;
     text-align: center;
+    height: 40px;
+    cursor: pointer;
+    background-color:rgb(3, 163, 216);
+}
+.back:hover{
+    background-color:rgb(5, 129, 170);
+    color:white;
+}
+.back i{
+    margin-top:10px;
 }
 
 @media screen and (max-width:900px){
@@ -106,6 +134,9 @@
         /* margin: 0px 5vw; */
         max-width: 100%;
         max-height: 45vh;
+    }
+    .image-container{
+        width:75vw;
     }
     .right{
         float:none;
